updated Porfolio projects

--- a/index.html
+++ b/index.html
@@ -559,14 +559,22 @@
             My Projects
           </h2>
           <div
-            class="mx-auto grid w-full max-w-7xl grid-cols-1 gap-5 px-10 pt-10 sm:grid-cols-2 md:grid-cols-3"
+            class="mx-auto grid w-full max-w-7xl grid-cols-1 gap-5 pt-10 sm:grid-cols-2 sm:px-10 md:grid-cols-3"
           >
             <div class="w-full">
-              <div class="relative aspect-[16/9] bg-slate-400">1</div>
               <div
-                class="flex min-h-40 flex-col justify-between bg-slate-700 p-3 text-sm sm:text-base"
+                class="relative flex aspect-[16/9] overflow-hidden rounded-lg bg-slate-400"
               >
-                <div class="text-xl font-bold">NewsWeb</div>
+                <img
+                  class="overflow-hidden"
+                  src="./assets/NewsWeb_img.png"
+                  alt="newsWebImg"
+                />
+              </div>
+              <div
+                class="flex min-h-40 flex-col justify-between rounded-lg bg-slate-700 p-3 text-sm sm:text-base"
+              >
+                <div class="text- text-xl font-bold">NewsWeb</div>
                 <div class="py-2">
                   NewsWeb is an Online Platform that Provide Realtime News Based
                   on News API. NewsWeb Also has Different Kind of Categories to
@@ -576,68 +584,9 @@
                   <button
                     class="rounded-lg bg-gradient-to-br from-blue-500 via-purple-500 to-pink-500 px-1 py-1"
                   >
-                    <span
-                      class="block rounded-lg bg-black px-4 transition-all hover:bg-gradient-to-br hover:from-blue-500 hover:via-purple-500 hover:to-pink-500"
-                      >GitHub</span
-                    >
-                  </button>
-                  <button
-                    class="rounded-3xl bg-gradient-to-br from-blue-500 via-purple-500 to-pink-500 px-1 py-1"
-                  >
-                    <span
-                      class="block rounded-lg bg-black px-1 transition-all hover:bg-gradient-to-br hover:from-blue-500 hover:via-purple-500 hover:to-pink-500"
-                      >Live</span
-                    >
-                  </button>
-                </div>
-              </div>
-            </div>
-            <div class="w-full">
-              <div class="relative aspect-[16/9] bg-slate-400">1</div>
-              <div
-                class="flex min-h-40 flex-col justify-between bg-slate-700 p-3 text-sm sm:text-base"
-              >
-                <div>Title project</div>
-                <div>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Culpa, adipisci!
-                </div>
-                <div class="flex gap-3">
-                  <button
-                    class="rounded-lg bg-gradient-to-br from-blue-500 via-purple-500 to-pink-500 px-1 py-1"
-                  >
-                    <span
-                      class="block rounded-lg bg-black px-4 transition-all hover:bg-gradient-to-br hover:from-blue-500 hover:via-purple-500 hover:to-pink-500"
-                      >GitHub</span
-                    >
-                  </button>
-                  <button
-                    class="rounded-3xl bg-gradient-to-br from-blue-500 via-purple-500 to-pink-500 px-1 py-1"
-                  >
-                    <span
-                      class="block rounded-lg bg-black px-1 transition-all hover:bg-gradient-to-br hover:from-blue-500 hover:via-purple-500 hover:to-pink-500"
-                      >Live</span
-                    >
-                  </button>
-                </div>
-              </div>
-            </div>
-            <div class="w-full">
-              <div class="relative aspect-[16/9] bg-slate-400">1</div>
-              <div
-                class="flex min-h-40 flex-col justify-between bg-slate-700 p-3 text-sm sm:text-base"
-              >
-                <div>Title project</div>
-                <div>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Culpa, adipisci!
-                </div>
-                <div class="flex gap-3">
-                  <button
-                    class="rounded-lg bg-gradient-to-br from-blue-500 via-purple-500 to-pink-500 px-1 py-1"
-                  >
                     <a
-                    href=""
+                      target="_blank"
+                      href="https://github.com/KB2311/NewsWeb"
                       class="block rounded-lg bg-black px-4 transition-all hover:bg-gradient-to-br hover:from-blue-500 hover:via-purple-500 hover:to-pink-500"
                       >GitHub</a
                     >
@@ -645,9 +594,98 @@
                   <button
                     class="rounded-3xl bg-gradient-to-br from-blue-500 via-purple-500 to-pink-500 px-1 py-1"
                   >
-                    <span
+                    <a
+                      target="_blank"
+                      href="https://news-web-inky.vercel.app/"
                       class="block rounded-lg bg-black px-1 transition-all hover:bg-gradient-to-br hover:from-blue-500 hover:via-purple-500 hover:to-pink-500"
-                      >Live</span
+                      >Live</a
+                    >
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="w-full">
+              <div
+                class="relative flex aspect-[16/9] overflow-hidden rounded-lg bg-slate-400"
+              >
+                <img
+                  class="overflow-hidden"
+                  src="./assets/Brancy_img.png"
+                  alt="BrancyImg"
+                />
+              </div>
+              <div
+                class="flex min-h-40 flex-col justify-between rounded-lg bg-slate-700 p-3 text-sm sm:text-base"
+              >
+                <div class="text- text-xl font-bold">Brancy Web UI</div>
+                <div class="py-2">
+                  Brancy is an Responsive Cosmetic Single Page Website.In This
+                  Website I show my skill of tailwindCSS And React Js.
+                </div>
+                <div class="flex gap-3">
+                  <button
+                    class="rounded-lg bg-gradient-to-br from-blue-500 via-purple-500 to-pink-500 px-1 py-1"
+                  >
+                    <a
+                      target="_blank"
+                      href="https://github.com/KB2311/Brancy-WebUi-React"
+                      class="block rounded-lg bg-black px-4 transition-all hover:bg-gradient-to-br hover:from-blue-500 hover:via-purple-500 hover:to-pink-500"
+                      >GitHub</a
+                    >
+                  </button>
+                  <button
+                    class="rounded-3xl bg-gradient-to-br from-blue-500 via-purple-500 to-pink-500 px-1 py-1"
+                  >
+                    <a
+                      target="_blank"
+                      href="https://brancy-web-ui-react.vercel.app/"
+                      class="block rounded-lg bg-black px-1 transition-all hover:bg-gradient-to-br hover:from-blue-500 hover:via-purple-500 hover:to-pink-500"
+                      >Live</a
+                    >
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="w-full">
+              <div
+                class="relative flex aspect-[16/9] overflow-hidden rounded-lg bg-slate-400"
+              >
+                <img
+                  class="overflow-hidden"
+                  src="./assets/Sneaker_img.png"
+                  alt="SneakerImg"
+                />
+              </div>
+              <div
+                class="flex min-h-40 flex-col justify-between rounded-lg bg-slate-700 p-3 text-sm sm:text-base"
+              >
+                <div class="text- text-xl font-bold">
+                  Sneaker E-Commerce Landing Page
+                </div>
+                <div class="py-2">
+                  In Sneaker E-commerce Landing Page I shown my Responsive UI
+                  Skills Using TailwindCSS and also used some amount of
+                  JavaScript.
+                </div>
+                <div class="flex gap-3">
+                  <button
+                    class="rounded-lg bg-gradient-to-br from-blue-500 via-purple-500 to-pink-500 px-1 py-1"
+                  >
+                    <a
+                      target="_blank"
+                      href="https://github.com/KB2311/Responsive-E-commerce-Landing-Page"
+                      class="block rounded-lg bg-black px-4 transition-all hover:bg-gradient-to-br hover:from-blue-500 hover:via-purple-500 hover:to-pink-500"
+                      >GitHub</a
+                    >
+                  </button>
+                  <button
+                    class="rounded-3xl bg-gradient-to-br from-blue-500 via-purple-500 to-pink-500 px-1 py-1"
+                  >
+                    <a
+                      target="_blank"
+                      href="https://kb2311.github.io/Responsive-E-commerce-Landing-Page/"
+                      class="block rounded-lg bg-black px-1 transition-all hover:bg-gradient-to-br hover:from-blue-500 hover:via-purple-500 hover:to-pink-500"
+                      >Live</a
                     >
                   </button>
                 </div>
