--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <a class="nav_link" href="#projects">Projects</a>
               </li>
               <li class="hover:text-purple-400">
-                <a class="nav_link" href="#contect">Contect</a>
+                <a class="nav_link" href="#contact">Contact</a>
               </li>
             </ul>
           </nav>
@@ -694,14 +694,14 @@
           </div>
         </div>
       </section>
-      <section class="mt-14 md:mt-0 md:min-h-[80vh]" id="contect">
+      <section class="mt-14 md:mt-5 md:min-h-[80vh]" id="contact">
         <div
           class="mx-auto flex h-full w-full max-w-7xl flex-col items-center justify-center"
         >
           <h2
             class="mb-10 w-fit rounded-lg bg-gradient-to-br from-purple-600 via-blue-500 to-pink-600 p-1 text-xl font-bold md:p-2 md:text-3xl"
           >
-            Contect Me
+            Contact Me
           </h2>
           <div
             class="mx-auto grid h-full w-full max-w-7xl grid-cols-1 justify-center md:grid-cols-2 md:p-10"
